# sarc-ai-platform

./: README.md  docker-compose.yml
PythonFastAPIWebApp/: .dockerignore  Dockerfile  main.py  pipeline.py  prefetch_weights.py  pyproject.toml
main-backend/: .dockerignore  Dockerfile  pom.xml
main-backend/src/main/java/com/sarcopenia/backend/: CoreBackendApplication.java
main-backend/src/main/java/com/sarcopenia/backend/config/: AppProperties.java  DataInitializer.java  WebConfig.java
main-backend/src/main/java/com/sarcopenia/backend/metrics/: MetricsDeriver.java
main-backend/src/main/java/com/sarcopenia/backend/npy/: InvalidNpyException.java  NpyArray.java  NpyReader.java  NpyWriter.java
main-backend/src/main/java/com/sarcopenia/backend/patient/: Patient.java  PatientController.java  PatientCreateRequest.java  PatientDto.java  PatientRepository.java  PatientService.java  Sex.java
main-backend/src/main/resources/: application.yml
web-ui/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web-ui/src/: App.tsx  main.tsx  theme.ts  vite-env.d.ts
web-ui/src/api/: aiApi.ts  config.ts  httpApi.ts  index.ts  mockApi.ts  types.ts
web-ui/src/components/: ConfirmDialog.tsx  Dashboard.tsx  NewPatientDialog.tsx  NewScanDialog.tsx  PatientDetailDialog.tsx  PatientInfoTab.tsx  ScanEditDialog.tsx  ScanViewerDialog.tsx  ScansTab.tsx  SliceMaskEditor.tsx
web-ui/src/hooks/: useAsync.ts
web-ui/src/utils/: format.ts  npy.ts
(+13 files in other folders)
